--- a/css/styles.css
+++ b/css/styles.css
@@ -465,11 +465,12 @@ font-size: 16px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         padding-left: 16px;
         background-color: transparent;
-        color: #fff;
-        margin-right: 24px;
+        color: ffffff;
+        
         padding-top:8px;
         padding-bottom: 8px;
         outline: transparent;
+        line-height: 2;
 }
 
 .footer-input::placeholder{
@@ -478,10 +479,11 @@ font-size: 16px;
         font-size: 12px;
         line-height: 2;
         letter-spacing: 0.04em;
-        color: #fff;
+        color: #ffffff;
 }
 .footer-form-btn{
     display: flex;
+    justify-content: center;
     align-items: center;
     font-weight: 500;
         font-size: 16px;
@@ -491,13 +493,13 @@ font-size: 16px;
         color: #fff;
         background-color: #4d5ae5;
         border-radius: 4px;
-            padding: 8px 24px;
-            width: 165px;
+            
+            min-width: 165px;
             height: 40px;
             border-color: transparent;
-            padding-right: 64px;
+            
         cursor:pointer;
-
+        border:none;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
         
@@ -508,6 +510,7 @@ font-size: 16px;
 
 .footer-form-input-wrap{
     display: flex;
+    gap: 24px;
 }
 
 .footer-form-icon{
@@ -515,14 +518,10 @@ font-size: 16px;
 }
 
 .form-button-wrap{
-    position: relative;
 }
 
 .footer-form-icon{
-    position: absolute;
-    top:50%;
-    right:24px;
-    transform: translateY(-50%);
+    margin-left: 16px;
 }
 
 .backdrop{
@@ -535,6 +534,7 @@ font-size: 16px;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open{
@@ -554,7 +554,7 @@ font-size: 16px;
             background-color: #fcfcfc;
             border-radius: 4px;
             padding: 72px 24px 24px 24px;
-            
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn {
@@ -563,7 +563,8 @@ font-size: 16px;
         height: 24px;
         justify-content: center;
         align-items: center;
-    border-radius: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
     background-color: #e7e9fc;
     position: absolute;
         top:24px;
@@ -571,17 +572,27 @@ font-size: 16px;
     border-width: 1px;
     border-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0
 }
 
 .close-btn:hover , .close-btn:focus{
     background-color: #404bbf;
     fill:#fff;
+    border: none
+}
+
+.close-btn:hover .close-icon,
+.close-btn:focus .close-icon{
+    fill:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 
-.close-icon {}
+.close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .modal-title{
     font-weight: 500;
@@ -605,6 +616,8 @@ font-size: 16px;
         padding-left:38px;
         height: 40px;
         outline: transparent;
+        background-color: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input::placeholder{
@@ -619,8 +632,9 @@ font-size: 16px;
 }
 
 .form-label{
+    display: block;
     font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         margin-bottom: 4px;
@@ -639,11 +653,14 @@ font-size: 16px;
     left:16px;
     top:50%;
     transform:translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .model-form-textarea{
     resize: none;
     width: 100%;
+    line-height: 1.17;
+    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
         height: 120px;
@@ -651,7 +668,13 @@ font-size: 16px;
         font-size: 12px;
         padding:8px 16px;
             outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.model-form-textarea:focus-within{
+    border-color: #4D5AE5;
+}
+
 .model-form-textarea::placeholder{
     line-height: 1.16667;
         letter-spacing: 0.04em;
@@ -670,16 +693,17 @@ font-size: 16px;
         letter-spacing: 0.04em;
         text-align: center;
         color: #fff;
-        width: 169px;
+        min-width: 169px;
             height: 56px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
             background-color: #4d5ae5;
             border-color: transparent;
             cursor: pointer;
             border-radius: 4px;
-        margin-top: 24px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+        
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        border:none;
+    }
 
 .modal-form-btn:hover, .modal-form-btn:focus{
     background-color: #404bbf;
@@ -721,5 +745,10 @@ font-size: 16px;
 
 .modal-field:nth-child(4){
     margin-bottom: 16px;
+
+}
+
+.modal-field:nth-child(5){
+    margin-bottom: 24px;
 }
 
