--- a/css/styles.css
+++ b/css/styles.css
@@ -458,6 +458,7 @@ font-size: 16px;
 }
 
 .footer-input{
+    font-size: 12px;
     border: 1px solid #fff;
         border-radius: 4px;
         width: 264px;
@@ -465,7 +466,7 @@ font-size: 16px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         padding-left: 16px;
         background-color: transparent;
-        color: ffffff;
+        color: #ffffff;
         
         padding-top:8px;
         padding-bottom: 8px;
@@ -479,7 +480,7 @@ font-size: 16px;
         font-size: 12px;
         line-height: 2;
         letter-spacing: 0.04em;
-        color: #ffffff;
+        color: #ffffff;;
 }
 .footer-form-btn{
     display: flex;
