--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@ font-size: 16px;
         padding-bottom: 8px;
         outline: transparent;
         line-height: 2;
+        letter-spacing: 0.04em;
 }
 
 .footer-input::placeholder{
@@ -633,13 +634,13 @@ font-size: 16px;
 }
 
 .form-label{
-    display: block;
     font-size: 12px;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         margin-bottom: 4px;
         display: inline-block;
+        display:block;
 }
 
 .modal-input-wrap{
@@ -661,6 +662,8 @@ font-size: 16px;
     resize: none;
     width: 100%;
     line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
@@ -712,35 +715,40 @@ font-size: 16px;
 
 .modal-check-text{
     font-size: 12px;
-        line-height: 1.16;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         display: flex;
         align-items: center;
         
-        a{
-            line-height: 1.33333;
-                text-decoration: underline;
-                text-decoration-skip-ink: none;
-                color: #4d5ae5;
-                margin-left: 4px
-        }
-        span{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 16px;
-            height: 16px;
-            border-radius: 2px;
-                border: 1px solid rgba(46, 47, 66, 0.4);
-            fill:transparent;
-        margin-right: 8px;
-            }
+       
+        
+}
+
+.modal-checkbox-link{
+line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+    margin-left: 4px
+}
+
+.modal-checkbox{
+display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    fill: transparent;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text span{
     background-color: #404bbf;
-    fill: #fff;
+    fill:#F4F4FD;
     border:none;
 }
 
